--- a/Athlete_Connect/05 - doacoes/doacoesEnvio.html
+++ b/Athlete_Connect/05 - doacoes/doacoesEnvio.html
@@ -92,7 +92,9 @@
         </div>
         <input type="number" placeholder="  R$:" />
         <br />
-        <button class="finalizar" type="button">Realizar Doação</button>
+        <a href="../05 - doacoes/TelasPagamento/telaPagamento.html">
+          <button class="finalizar" type="button">Realizar Doação</button>
+        </a>
       </form>
     </main>
 
