build, refactor: FAQ

--- a/Athlete_Connect/07 - FAQ/FAQ.html
+++ b/Athlete_Connect/07 - FAQ/FAQ.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -52,8 +53,8 @@
       </form>
     </div>
 
-    <nav>
-      <div>
+    <nav class="helpBox">
+      <div class="help">
         <p>Perguntas sobre <b>Doações</b></p>
       </div>
 
