fix: css das telas de cadastro

--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
@@ -21,7 +21,7 @@
           border="0"
         />
       </section>
-      <form action="./login.html">
+      <form action="./login.html" class="formsCadastro">
         <section class="forms">
           <input type="text" placeholder="Nome Completo" required />
           <input type="text" placeholder="CEP" required />
