--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg.html
@@ -31,7 +31,7 @@
         <h1>Registre uma</h1>
         <h1 class="titleGreen">Organização</h1>
       </section>
-      <form action="./cadastroOrg2.html">
+      <form action="./cadastroOrg2.html" class="formsCadastro">
         <section class="forms">
           <input type="text" placeholder="CPF/CNPJ" required />
           <input type="email" placeholder="Email" required />
