--- a/Athlete_Connect/00 - cadastro_login/01 - login/login.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/login.html
@@ -28,7 +28,7 @@
           <input type="password" placeholder="Senha" required />
         </section>
 
-        <section class="loginpage">
+        <section class="loginpage" style="margin-top: 20px;">
           <p>Esqueceu a senha?</p>
           <a href="#">Redefinir senha!</a>
         </section>
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <section class="loginpage">
+      <section class="loginpage" >
         <p>Não possui uma conta?</p>
         <a href="../00 - welcome/index.html">Crie sua conta!</a>
       </section>
