--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
@@ -32,7 +32,7 @@
         <h1 class="titleGreen">Atleta</h1>
       </section>
 
-      <form action="./login.html">
+      <form action="./login.html" class="formsCadastro">
         <section class="forms">
           <input type="text" placeholder="CPF/CNPJ" required />
           <input type="email" placeholder="Email" required />
@@ -46,7 +46,7 @@
         </section>
 
         <div class="submitbutton">
-          <button class="botaoPrincipal" type="submit">CRIAR CONTA</button>
+          <button class="botaoPrincipal" type="submit" style="margin-top: 0px;">CRIAR CONTA</button>
         </div>
       </form>
     </main>
