--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor.html
@@ -31,7 +31,7 @@
         <h1>Bem vindo,</h1>
         <h1 class="titleGreen">Investidor</h1>
       </section>
-      <form action="./cadastroInvestidor2.html">
+      <form action="./cadastroInvestidor2.html" class="formsCadastro">
         <section class="forms">
           <input type="text" placeholder="CPF/CNPJ" required />
           <input type="email" placeholder="Email" required />
