--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
@@ -22,7 +22,7 @@
         />
       </section>
 
-      <form action="./login.html">
+      <form action="./login.html" class="formsCadastro">
         <section class="forms">
           <input type="text" placeholder="Nome da sua Organização" required />
           <input type="text" placeholder="CEP" />
