fix: box atravessando navbar inferior

--- a/Athlete_Connect/04 - perfil/VistoPorInvestidor.html
+++ b/Athlete_Connect/04 - perfil/VistoPorInvestidor.html
@@ -23,7 +23,7 @@
       <header class="header-perfil">
         <section class="informacao-perfil">
           <img
-            src="https://scontent.fssa7-1.fna.fbcdn.net/v/t39.30808-1/278583378_4953919158071204_8096330768100228489_n.jpg?stp=dst-jpg_s200x200&_nc_cat=100&ccb=1-7&_nc_sid=f4b9fd&_nc_ohc=FB4lmZ6B3nUQ7kNvgErA0sA&_nc_zt=24&_nc_ht=scontent.fssa7-1.fna&_nc_gid=AoHC4yELtzQi06DUQUAmxg5&oh=00_AYD9V8jmMdCVtnp10RgTmQVxm59mywvRXTpf9XEsAjJE4A&oe=673055D2"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLmbBMiq98TtuW7IZMQSLZ9GaTm3QY-fcpyw&s"
             alt="Foto perfil"
             class="foto-perfil"
           />
@@ -68,14 +68,14 @@
           <!-- Bloco de postagem -->
           <div class="profilePhoto">
             <!-- Foto de perfil -->
-            <img src="https://scontent.fssa7-1.fna.fbcdn.net/v/t39.30808-1/278583378_4953919158071204_8096330768100228489_n.jpg?stp=dst-jpg_s200x200&_nc_cat=100&ccb=1-7&_nc_sid=f4b9fd&_nc_ohc=FB4lmZ6B3nUQ7kNvgErA0sA&_nc_zt=24&_nc_ht=scontent.fssa7-1.fna&_nc_gid=AoHC4yELtzQi06DUQUAmxg5&oh=00_AYD9V8jmMdCVtnp10RgTmQVxm59mywvRXTpf9XEsAjJE4A&oe=673055D2" alt="" />
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLmbBMiq98TtuW7IZMQSLZ9GaTm3QY-fcpyw&s" alt="" />
           </div>
           <div class="postagemcontent">
             <!-- Bloco de conteúdo da postagem -->
             <h4 class="nomePerfil" style="font-size: 22px;">Anderson Ferreira</h4>
             <p style="font-size: 20px;">Campeonato Brasileiro 1 Divisão 🏀</p>
             <img
-              src="https://scontent.fssa7-1.fna.fbcdn.net/v/t39.30808-6/313392429_483792593778949_347094215879857174_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=833d8c&_nc_ohc=jiwbVTNjg7EQ7kNvgHCXSPs&_nc_zt=23&_nc_ht=scontent.fssa7-1.fna&_nc_gid=AKLx1l0f9mYaCVNXKr7IZiC&oh=00_AYBNjgWcp9LlEzDc2o1VOWeZOdTf5nKznEEqx4tL4VB_2g&oe=67304403"
+              src="https://live.staticflickr.com/65535/52223931792_dac7b96e95_b.jpg"
               alt=""
             />
             <div class="iconsPostagem">
