--- a/Athlete_Connect/01 - telas principais/02 - search/perfis.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/perfis.html
@@ -58,7 +58,7 @@
         </div>
         <div class="profileSearch">
           <img
-            src="https://scontent.fssa7-1.fna.fbcdn.net/v/t39.30808-1/278583378_4953919158071204_8096330768100228489_n.jpg?stp=dst-jpg_s200x200&_nc_cat=100&ccb=1-7&_nc_sid=f4b9fd&_nc_ohc=FB4lmZ6B3nUQ7kNvgErA0sA&_nc_zt=24&_nc_ht=scontent.fssa7-1.fna&_nc_gid=AoHC4yELtzQi06DUQUAmxg5&oh=00_AYD9V8jmMdCVtnp10RgTmQVxm59mywvRXTpf9XEsAjJE4A&oe=673055D2"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLmbBMiq98TtuW7IZMQSLZ9GaTm3QY-fcpyw&s"
             alt="ninja"
           />
           <a href="../../04 - perfil/VistoPorInvestidor.html" class="profileName">Anderson Ferreira</a>
