Alterações: Finalização das doações recebidas

--- a/Athlete_Connect/05 - doacoes/doacaoesRecebidas.html
+++ b/Athlete_Connect/05 - doacoes/doacaoesRecebidas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,79 +8,75 @@
   <link rel="stylesheet" href="stylesrecebidas.css">
   <title>Doações Recebidas</title>
 </head>
+
 <body>
   <div class="container">
     <a href="../01 - telas principais/01 - para voce/paraVoce.html">
       <img src="imagens/ic_round-arrow-back-ios.png" alt="seta" />
-    </a>
-    <h1>Doações Recebidas</h1>
+    </a> 
+      <h1>
+        <strong>Doações Recebidas</strong>
+      </h1>
+      <h2>2024</h2>
     <div class="months">
       <div class="month">JAN</div>
       <div class="month">FEV</div>
       <div class="month">MAR</div>
       <div class="month">APR</div>
-      <div class="month selected">MAI 2024</div>
+      <div class="month selected">MAI</div>
     </div>
     <div class="donation-list">
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Sandro Dias</p>
+          <p class="donor"><strong>Sandro Dias</strong></p>
           <p class="date">Ter 12.05.2024</p>
         </div>
-        <p class="amount">R$29.90</p>
+        <p class="amount"><strong>R$29.90</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Doação Anônima</p>
+          <p class="donor"><strong>Doação Anônima</strong></p>
           <p class="date">Seg 11.05.2024</p>
         </div>
-        <p class="amount">R$9.50</p>
+        <p class="amount"><strong>R$9.50</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Flávio Almeida</p>
+          <p class="donor"><strong>Flávio Almeida</strong></p>
           <p class="date">Seg 11.05.2024</p>
         </div>
-        <p class="amount">R$19.30</p>
+        <p class="amount"><strong>R$19.30</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Luiza Barreto</p>
+          <p class="donor"><strong>Luiza Barreto</strong></p>
           <p class="date">Sab 09.05.2024</p>
         </div>
-        <p class="amount">R$20.00</p>
+        <p class="amount"><strong>R$20.00</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Doação Anônima</p>
+          <p class="donor"><strong>Doação Anônima</strong></p>
           <p class="date">Sex 08.05.2024</p>
         </div>
-        <p class="amount">R$14.00</p>
+        <p class="amount"><strong>R$14.00</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Doação Anônima</p>
+          <p class="donor"><strong>Doação Anônima</strong></p>
           <p class="date">Seg 11.03.2024</p>
         </div>
-        <p class="amount">R$8.99</p>
+        <p class="amount"><strong>R$8.99</strong></p>
       </div>
     </div>
   </div>
   <div class="bottom-nav">
     </button>
     <a href="../01 - telas principais/01 - para voce/paraVoce.html" class="nav-item">
-      <img
-        src="../images/homeCinza.svg"
-        alt="home"
-        border="0"
-      />
+      <img src="../images/homeCinza.svg" alt="home" border="0" />
     </a>
     <a href="../01 - telas principais/02 - search/perfis.html" class="nav-item">
-      <img
-        src="https://i.ibb.co/3k6pWKF/search.png"
-        alt="search"
-        border="0"
-      />
+      <img src="https://i.ibb.co/3k6pWKF/search.png" alt="search" border="0" />
     </a>
     <a href="../02 - chat/group.html" class="nav-item">
       <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
@@ -89,4 +86,5 @@
     </a>
   </div>
 </body>
+
 </html>
