--- a/Athlete_Connect/07 - FAQ/FAQ.html
+++ b/Athlete_Connect/07 - FAQ/FAQ.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>FAQ</title>
+    <title class="faq">FAQ</title>
   </head>
   <style></style>
   <body>
@@ -65,7 +65,6 @@
         <p>Perguntas sobre <b>Atletas</b></p>
       </div>
     </nav>
-
     <div>
       <p><b>Principais perguntas</b></p>
 
