Alterações: Alinhar "2024" com h1 "Doações Enviadas", aumentar espaçamento entre os caracteres dos valores

--- a/Athlete_Connect/05 - doacoes/doacoesEnviadas.html
+++ b/Athlete_Connect/05 - doacoes/doacoesEnviadas.html
@@ -12,56 +12,57 @@
     <a href="../01 - telas principais/01 - para voce/paraVoce.html">
         <img src="imagens/ic_round-arrow-back-ios.png" alt="seta" />
       </a>
-    <h1>Doações Enviadas</h1>
+    <h1><strong>Doações Enviadas</strong></h1>
+    <h2>2024</h2>
     <div class="months">
       <div class="month">JAN</div>
       <div class="month">FEV</div>
       <div class="month">MAR</div>
       <div class="month">APR</div>
-      <div class="month selected">MAI 2024</div>
+      <div class="month selected">MAI</div>
     </div>
     <div class="donation-list">
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Mauro Costa</p>
+          <p class="donor"><strong>Mauro Costa</strong></p>
           <p class="date">Ter 13.05.2024</p>
         </div>
-        <p class="amount">R$16.90</p>
+        <p class="amount"><strong>R$16.90</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Elmo Ferreira</p>
+          <p class="donor"><strong>Elmo Ferreira</strong></p>
           <p class="date">Seg 15.05.2024</p>
         </div>
-        <p class="amount">R$90.50</p>
+        <p class="amount"><strong>R$90.50</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Arnaldo Oliveira</p>
+          <p class="donor"><strong>Arnaldo Oliveira</strong></p>
           <p class="date">Seg 23.05.2024</p>
         </div>
-        <p class="amount">R$10.30</p>
+        <p class="amount"><strong>R$10.30</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Carlos Afonso</p>
+          <p class="donor"><strong>Carlos Afonso</strong></p>
           <p class="date">Sab 07.05.2024</p>
         </div>
-        <p class="amount">R$27.00</p>
+        <p class="amount"><strong>R$27.00</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Aloísio Nunes</p>
+          <p class="donor"><strong>Aloísio Nunes</strong></p>
           <p class="date">Sex 08.05.2024</p>
         </div>
-        <p class="amount">R$19.00</p>
+        <p class="amount"><strong>R$19.00</strong></p>
       </div>
       <div class="donation-item">
         <div class="donation-info">
-          <p class="donor">Júlia Paiva</p>
+          <p class="donor"><Strong>Júlia Paiva</Strong></p>
           <p class="date">Seg 12.03.2024</p>
         </div>
-        <p class="amount">R$80.99</p>
+        <p class="amount"><strong>R$80.99</strong></p>
       </div>
     </div>
   </div>
